<resources>
    <string name="app_name">Mental Counting</string>

    <!-- Main Activity -->
    <string name="play">Play</string>
    <string name="scoring">Scoring</string>

    <!-- Play Activity -->
    <string name="operation">operation</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="hint">Write your response here</string>
    <string name="validate_button">Validate</string>

    <!-- Scoring Activity -->
    <string name="clear_score">Clear Score</string>
    <string name="previous_button">Previous Page</string>
    <string name="counter">Number of operations</string>
    <string name="percentage">Percentage of success</string>
    <string name="previous_score">Last success</string>

    <!-- Menu -->
    <string name="compute_menu_label">Scoring</string>
    <string name="reset_menu_label">Reset</string>
    <string name="enterResponse">Enter your response</string>

</resources>